# wav1c

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  ffmpeg-libwav1c.patch
.github/workflows/: publish.yml
docs/: HDR_HEIC_MANUAL.md  ROADMAP.md
docs/plans/: 2026-02-13-minimal-av1-encoder-design.md  2026-02-13-minimal-av1-encoder-impl.md  2026-02-13-phase2-3-msac-tile-encoding-design.md  2026-02-13-phase2-3-msac-tile-encoding-impl.md  2026-02-13-phase4-arbitrary-dimensions.md  2026-02-13-phase5-real-image-input.md  2026-02-13-phase6-multi-frame.md  2026-02-13-phase8-dct-transforms.md  2026-02-15-intra-prediction-modes-design.md  2026-02-15-intra-prediction-modes.md  2026-02-15-motion-estimation.md  2026-02-15-rd-mode-selection.md  2026-02-15-subpel-motion.md  2026-02-15-transform-type-selection.md
examples/: test_pattern.rs
scripts/: extract_cdfs.py  quality_pipeline.py
scripts/quality_manifests/: vmaf_resource_real_content.json
src/: bitwriter.rs  cdf.rs  dct.rs  dequant.rs  frame.rs  ivf.rs  lib.rs  main.rs  msac.rs  obu.rs  rc.rs  scan.rs  sequence.rs  tile.rs  y4m.rs
tests/: integration.rs
wav1c/: Cargo.toml
wav1c-cli/: Cargo.toml
wav1c-cli/src/: avif.rs  heic.rs  ivf.rs  main.rs  mp4.rs
wav1c-ffi/: Cargo.toml
wav1c-ffi/examples/: encode.c
wav1c-ffi/include/: wav1c.h
wav1c-ffi/src/: lib.rs
wav1c-ffi/tests/: ffi_integration.rs
wav1c-wasm/: Cargo.toml
wav1c-wasm/src/: lib.rs
wav1c/examples/: encode_y4m.rs  test_pattern.rs
wav1c/src/: avif.rs  bitwriter.rs  cdef.rs  cdf.rs  cdf_coef.rs  dct.rs  dequant.rs  encoder.rs  error.rs  fps.rs  frame.rs  lib.rs  metadata.rs  mp4.rs  msac.rs  obu.rs  packet.rs  rc.rs  rdo.rs  satd.rs  scan.rs  sequence.rs  tile.rs  video.rs  y4m.rs
wav1c/tests/: integration.rs
