[workspace]
members = ["wav1c", "wav1c-cli", "wav1c-ffi", "wav1c-wasm"]
resolver = "3"

[workspace.package]
version = "0.1.2"
authors = ["Rafael Caricio <rafael@caricio.com>"]
license = "MPL-2.0"
repository = "https://github.com/rafaelcaricio/wav1c"
keywords = ["av1", "video", "encoder", "codec", "y4m"]
categories = ["multimedia::video", "encoding"]
