[package]
name = "wav1c-cli"
version.workspace = true
edition = "2024"
description = "Command-line AV1 encoder powered by wav1c."
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "wav1c"
path = "src/main.rs"

[dependencies]
wav1c = { path = "../wav1c", version = "0.1.2" }
