[package]
name = "wav1c-ffi"
version = "0.1.0"
edition = "2024"
description = "C FFI bindings for the wav1c AV1 encoder."
license = "MPL-2.0"
repository = "https://github.com/rafaelcaricio/wav1c"
authors.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
wav1c = { path = "../wav1c", version = "0.1.0" }
