[package]
name = "wav1c-ffi"
version.workspace = true
edition = "2024"
description = "C FFI bindings for the wav1c AV1 encoder."
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
wav1c = { path = "../wav1c", version = "0.2.0" }
